--- a/Data_Analysis_With_Python/House_Sales_in_King_Count_USA.jupyterlite.ipynb
+++ b/Data_Analysis_With_Python/House_Sales_in_King_Count_USA.jupyterlite.ipynb
@@ -513,6 +513,11 @@
     },
     {
       "cell_type": "markdown",
+      "source": "by adding the other features we can see that the R^2 had been increased",
+      "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
       "source": "### This will help with Question 8\n\nCreate a list of tuples, the first element in the tuple contains the name of the estimator:\n\n<code>'scale'</code>\n\n<code>'polynomial'</code>\n\n<code>'model'</code>\n\nThe second element in the tuple  contains the model constructor\n\n<code>StandardScaler()</code>\n\n<code>PolynomialFeatures(include_bias=False)</code>\n\n<code>LinearRegression()</code>\n",
       "metadata": {}
     },
@@ -547,6 +552,11 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "the R^2 is much better using the pipeline",
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
@@ -627,15 +637,36 @@
     },
     {
       "cell_type": "markdown",
+      "source": "the R^2 had been dicreased when we calculate the R^2 for the test data which lead to a slight overfitting.",
+      "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
       "source": "### Question 10\n\nPerform a second order polynomial transform on both the training data and testing data. Create and fit a Ridge regression object using the training data, set the regularisation parameter to 0.1, and calculate the R^2 utilising the test data provided. Take a screenshot of your code and the R^2.\n",
       "metadata": {}
     },
     {
       "cell_type": "code",
-      "source": "#Perform a second order polynomial transform on both the training data and testing data.\npr = PolynomialFeatures(degree=2)\nx_train_pr = pr.fit_transform(x_train)\nx_test_pr = pr.fit_transform(x_test)  \nRR = Ridge(alpha = 0.1) \nRR.fit(x_train_pr, y_train)\nRR.score(x_test_pr, y_test)",
-      "metadata": {},
-      "execution_count": null,
-      "outputs": []
+      "source": "#Perform a second order polynomial transform on both the training data and testing data\npr = PolynomialFeatures(degree=2)\nx_train_pr = pr.fit_transform(x_train)\nx_test_pr = pr.fit_transform(x_test)  \n#. Create and fit a Ridge regression object using the training data\nRR = Ridge(alpha = 0.1) \n# calculate the R^2 utilising the test data provided\nRR.fit(x_train_pr, y_train)\nRR.score(x_test_pr, y_test)",
+      "metadata": {
+        "trusted": true
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "execution_count": 36,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "0.7002744263350642"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "R^2 resulting from the second order polynomial transformationa and the Ridge regression is better that the one above",
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
